changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Make missile and ball spells target a random part for multi-tiled objects.
Andreas Kirschbaum 2009-06-22

Fix array out-of-bounds accesses for monsters having stats > 30. Makes
trolls pick up boulders.
Andreas Kirschbaum 2009-06-22

Do not teleport character to savebed when re-logging in in a random map.
Andreas Kirschbaum 2009-06-21

Make monsters take the shortest route to the player.
Andreas Kirschbaum 2009-06-20

Suppress error messages about non-existing items for "apply -a" on already
applied items or "apply -u" un unapplied items.
Andreas Kirschbaum 2009-06-20

Make singing and oratory skills work against multi-tiled monsters.
Andreas Kirschbaum 2009-06-20

Retain unaggressive flag for splitting monsters.
Andreas Kirschbaum 2009-06-19

Prevent black puddings from jumping over walls.
Andreas Kirschbaum 2009-06-19

Insert dropped objects below the player.
Andreas Kirschbaum 2009-06-18

Allow monsters to pick up "throwable" items as weapons.
Andreas Kirschbaum 2009-06-18

Change weight check for monsters in object_get_pick(): replace
"item_weight <= picker_weight/3" with
"total_picker_weight does not exceed get_weight_limit(picker)". This allows
hill giants to pick up boulders and prevents vampires from carrying unlimited
weight.
Andreas Kirschbaum 2009-06-17

Allow monsters to apply items even if they do not know the needed skill.
Requiring the appropriate can_xxx flag is good enough.
Andreas Kirschbaum 2009-06-17

Add shopitems type 'none' matching items with 'type 0'. Prevents some error
messages in the server log.
Andreas Kirschbaum 2009-06-17
