@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Limit missile spells to turn at most one direction per turn.
+Andreas Kirschbaum 2009-06-22
+
 Make missile and ball spells target a random part for multi-tiled objects.
 Andreas Kirschbaum 2009-06-22
 
